# downloadx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
downloadx/: __main__.py  _typed.py  requirements.txt
downloadx/cmd/: __init__.py  __main__.py  instagram_cli.py  youtube_cli.py
downloadx/helpers/: enums.py  strings.py
downloadx/utils/: __init__.py  youtube.py
